--- a/public/signup.html
+++ b/public/signup.html
@@ -3,32 +3,34 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no">
-		<title>Forum | About</title>
-		<link rel="stylesheet" href="./styles/about-page.css">
+		<title>signup</title>
+		<link rel="stylesheet" href="/styles/about-page.css">
 	</head>
 	<body>
-		<form>
+		<form method="post" name="reg">
 		  <div class="container">
 		    <h1>Register</h1>
 		    <p>Please fill in this form to create an account.</p>
 		    <hr>
 
-		    <label for="email"><b>Email</b></label>
-		    <input type="text" placeholder="Enter Email" name="email" required>
+		    <label for="register-login"><b>Login</b></label>
+		    <input type="text" id="register-login" placeholder="Enter login..." name="login" required>
+
+				<label for="register-email"><b>Email</b></label>
+				<input type="text" id="email" placeholder="Enter your email..." name="email" required>
 
 		    <label for="psw"><b>Password</b></label>
-		    <input type="password" placeholder="Enter Password" name="psw" required>
+		    <input type="password" id="psw" placeholder="Enter password" name="psw" required>
 
-		    <label for="psw-repeat"><b>Repeat Password</b></label>
-		    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+				<label for="pswConf"><b>Confirm password</b></label>
+			 <input type="password" id="pswConf" placeholder="Repeat password" name="pswConf" required>
 		    <hr>
 
 		    <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-		    <button type="submit" class="registerbtn">Register</button>
+		    <button type="submit" id="registerbtn" class="registerbtn">Register</button>
 		  </div>
-
 		  <div class="container signin">
-		    <p>Already have an account? <a href="#">Sign in</a>.</p>
+		    <p>Already have an account? <a href="/signin">Sign in</a>.</p>
 		  </div>
 		</form>
 	</body>
